minor design changes